3. Тестовое задание. Hibernate. [#330581] #1